deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notebook
spec:
  replicas: 1
  template:
    spec:
      containers:
      - image: jasonblanchard/k8s-pipeline-notebook
        name: notebook
        ports:
          - containerPort: 8000
