deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notebook
spec:
  ports:
  - name: http
    port: 9000
  type: NodePort
