deploy/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notebook
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/default-gateway
  http:
  - match:
    - uri:
        prefix: /env/notebook/ # Set by kustomize
    rewrite:
      uri: "/"
    route:
    - destination:
        host: notebook-env # Set by kustomize
        port:
          number: 8000
